# Wilx

./: .gitignore  .wilx_kill_log  FEATURE_PROPOSALS.md  PHASE1_IMPLEMENTATION.md  README.md  install_shim.ps1  main.py  pyproject.toml  requirements.txt  shell.py  wilx.bat
core/: cat.py  cd.py  clipboard.py  cp.py  echo.py  edit.py  htop.py  kill.py  killswitch.py  ls.py  man.py  mkdir.py  mv.py  nano.py  notify.py  pwd.py  rm.py  search.py  shell.py  task.py  touch.py
docs/: COMMANDS.md  index.md
docs/commands/: cat.md  cd.md  cp.md  echo.md  edit.md  htop.md  kill.md  killswitch.md  ls.md  man.md  mkdir.md  mv.md  nano.md  pwd.md  rm.md  shell.md  touch.md
scripts/: build_kill_ps1.ps1  build_wilx_ps1.ps1  clean_artifacts.ps1  generate_docs.py  generate_index.py  test_parse.py
utils/: __init__.py  helpers.py
