[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wilx"
version = "0.1.0"
description = "Small Windows/Linux utility CLI (htop/kill/editor)"
authors = [ { name = "", email = "" } ]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
# Expose `kill` as a console command
kill = "core.kill:main"
# Expose the full CLI as `wilx` (runs main.py which starts the interactive shell)
wilx = "main:main"
